/*
MIT License
Copyright(c) 2022 Futurewei Cloud
    Permission is hereby granted,
    free of charge, to any person obtaining a copy of this software and associated documentation files(the "Software"), to deal in the Software without restriction,
    including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and / or sell copies of the Software, and to permit persons
    to whom the Software is furnished to do so, subject to the following conditions:
    The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
    WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
*/

syntax="proto3";
package network;
import "common.proto";
option go_package = "github.com/futurewei-cloud/merak/api/proto/v1/network;network";

message InternalSecurityGroupRulelnfo {
    common.OperationType operation_type = 1;
    string id = 2;
    string name = 3;
    string description = 4;
    string ethertype = 5;
    string direction = 6;
    string protocol = 7;
    string port_range = 8;
    string remote_group_id = 9;
    string remote_ip_prefix = 10;
}

message InternalRouterInfo {
    common.OperationType operation_type = 1;
    string id = 2;
    string name = 3;
    repeated string subnets = 4;
}

message InternalGatewayInfo {
    common.OperationType operation_type = 1;
    string id = 2;
    string name = 3;
    repeated string ips = 4;
}

message InternalSecurityGroupInfo {
    common.OperationType operation_type = 1;
    string id = 2;
    string name = 3;
    string tenant_id = 4;
    string project_id = 5;
    repeated InternalSecurityGroupRulelnfo rules = 6;
    repeated string apply_to = 7;
}

message InternalNetworkInfo {
    common.OperationType operation_type = 1;
    string id = 2;
    string name = 3;
    uint32 number_of_vpcs = 4;
    uint32 number_of_subnet_per_vpc = 5;
    repeated common.InternalVpcInfo vpcs = 6;
    uint32 number_of_security_groups = 7;
    repeated InternalRouterInfo routers = 8;
    repeated InternalGatewayInfo gateways = 9;
    repeated InternalSecurityGroupInfo security_groups = 10;
}

message InternalStorageInfo{
    string info = 1;
}

message InternalNetConfigExtraInfo {
    string info = 1;
}

message InternalNetConfigConfiguration {
    uint32 format_version = 1;
    uint32 revision_number = 2;
    string request_id = 3;
    string netconfig_id = 4;
    common.MessageType message_type = 5;
    repeated common.InternalServiceInfo services = 6;
    repeated common.InternalComputeInfo computes = 7;
    InternalNetworkInfo network = 8;
    InternalStorageInfo storage = 9;
    InternalNetConfigExtraInfo extra_info = 10;
}

message InternalNetConfigInfo {
    common.OperationType operation_type = 1;
    InternalNetConfigConfiguration config = 2;
}

message ReturnNetworkMessage {
    common.ReturnCode return_code = 1;
    string return_message = 2;
    repeated common.InternalVpcInfo vpcs = 3;
    repeated string security_group_ids = 4;
}

service MerakNetworkService {
    rpc NetConfigHandler(InternalNetConfigInfo) returns (ReturnNetworkMessage) {}
}